add the main artcle into the web site

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project_1</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>Let's create our first project</header>
     <div class="grid-container">
-        <article>
-            <img src="./images/1.png" alt="main-image">
-        </article>
+      <article>
+        <img src="./images/1.png" alt="main-image" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+          illo. Voluptate facilis eaque laborum tempora nobis iusto ab sunt
+          architecto, voluptatum voluptas, officia vitae sequi illum? Aliquid
+          sint expedita ex.Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Similique, illo. Voluptate facilis eaque laborum tempora nobis
+          iusto ab sunt architecto, voluptatum voluptas, officia vitae sequi
+          illum? Aliqui.
+        </p>
+      </article>
     </div>
-</body>
+  </body>
 </html>
