create sub article and add some pictures and lorem paragraph text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,33 @@
           illum? Aliqui.
         </p>
       </article>
+      <article>
+        <img src="./images/2.webp" alt="image2" />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ea
+          dignissimos nostrum tenetur perspiciatis sint nam eveniet voluptates,
+          quod eius, repellat vitae ipsam magnam expedita temporibus atque
+          officiis. Recusandae, quas?
+        </p>
+      </article>
+      <article>
+        <img src="./images/3.webp" alt="image2" />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ea
+          dignissimos nostrum tenetur perspiciatis sint nam eveniet voluptates,
+          quod eius, repellat vitae ipsam magnam expedita temporibus atque
+          officiis. Recusandae, quas?
+        </p>
+      </article>
+      <article>
+        <img src="./images/4.jpg" alt="image2" />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ea
+          dignissimos nostrum tenetur perspiciatis sint nam eveniet voluptates,
+          quod eius, repellat vitae ipsam magnam expedita temporibus atque
+          officiis. Recusandae, quas?
+        </p>
+      </article>
     </div>
   </body>
 </html>
