finish the main article and apply the grid css concept  and apply nested grid concept

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>Let's create our first project</header>
     <div class="grid-container">
-      <article>
+      <article class="main-article">
         <img src="./images/1.png" alt="main-image" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
